# portfolio-manager

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/portfolio_manager/: __init__.py  config.py  export.py
src/portfolio_manager/backtest/: __init__.py  engine.py  montecarlo.py  valueadd.py  walkforward.py
src/portfolio_manager/cli/: __init__.py  main.py
src/portfolio_manager/core/: __init__.py  account.py  costs.py  portfolio.py  position.py  sectors.py  tax.py
src/portfolio_manager/data/: __init__.py  market.py
src/portfolio_manager/data/parsers/: __init__.py  base.py  fidelity.py  generic.py
src/portfolio_manager/metrics/: __init__.py  benchmark.py  ratios.py  returns.py  risk.py
src/portfolio_manager/optimization/: __init__.py  constraints.py  objectives.py  optimizer.py
src/portfolio_manager/web/: __init__.py  app.py
tests/: __init__.py  test_backtest.py  test_benchmark.py  test_metrics.py  test_optimizer.py  test_parser.py
